<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Health.StartingWindowActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:id="@+id/name"
            android:layout_width="315dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/name"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout

        android:layout_width="395dp"
        android:layout_height="380dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="25dp">

        <TextView
            android:id="@+id/vitals"
            android:layout_width="300dp"
            android:layout_height="49dp"
            android:text="@string/vitals"
            android:textAlignment="center"
            android:textColor="@color/textColor"
            android:textSize="18dp" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/weight"
            android:inputType="number"
            android:textColorHint="@color/textColorHint" />

        <EditText
            android:id="@+id/steps"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/steps"
            android:inputType="number"
            android:textColorHint="@color/textColorHint" />


        <TextView
            android:layout_width="343dp"
            android:layout_height="50dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save"
            android:layout_width="147dp"
            android:layout_height="80dp"
            android:text="@string/save"
            android:textColor="@color/textColor" />

        <TextView
            android:layout_width="20dp"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/clean"
            android:layout_width="147dp"
            android:layout_height="80dp"
            android:text="@string/clean"
            android:textColor="@color/textColor" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:textColor="@color/textColor"
        android:textSize="12dp" />
</LinearLayout>
