<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InfiniteTransitionActivity">

    <TextView
        android:id="@+id/head"
        android:layout_width="422dp"
        android:layout_height="69dp"
        android:layout_marginBottom="46dp"
        android:background="@color/color_head"
        android:text="@string/head"
        android:textColor="@color/color_text"
        android:textIsSelectable="false"
        android:textSize="24sp"
        android:textStyle="normal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="37dp"
        android:layout_marginBottom="313dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:background="@color/color_btn"
        android:text="@string/back"
        android:textColor="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_along"
        app:layout_constraintHorizontal_bias="0.636"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.558" />

    <Button
        android:id="@+id/btn_along"
        android:layout_width="138dp"
        android:layout_height="48dp"
        android:layout_marginEnd="36dp"
        android:background="@color/color_btn"
        android:text="@string/along"
        android:textColor="@color/color_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.558" />

    <TextView
        android:id="@+id/output"
        android:layout_width="298dp"
        android:layout_height="26dp"
        android:text="@string/output"
        android:textColor="@color/color_text"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.651"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.077" />
</androidx.constraintlayout.widget.ConstraintLayout>